Update runEpitopeDB_neoepitopes_STARmapped.sh
Signed-off-by: Mayank Mahajan <yashumayank@hotmail.com>